Flux : Fixed height container and scrollable overflow inside

--- a/site/src/components/assets/scss/pages/index/_index.scss
+++ b/site/src/components/assets/scss/pages/index/_index.scss
@@ -67,11 +67,22 @@ $hunit: 4vh;
         
 
         #flux{
-            position: absolute;
+            position: fixed;
             right: 0;
-            top: 0;
+            top: $height-top-bar;
             max-height: 100%;
-            overflow: scroll;
+            overflow: hidden;
+
+
+            .container{
+                width: 100%;
+                height: 100%;                
+                padding-right: $unite;
+                box-sizing: content-box;
+                overflow-y: scroll;
+                max-height: calc( 100vh - #{$height-top-bar} );
+
+            }            
         }
 
 
